--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -163,7 +163,8 @@ mark {
 }
 
 .bg-color {
-    background-image: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    // background-image: linear-gradient(to right, #0f808080 30%, #3F808080 100%);
+	background-color: rgba(0, 0, 0, 0.6) !important;
 }
 
 .text-color {
