--- a/themes/hexo-theme-matery/layout/_partial/github-link.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/github-link.ejs
@@ -13,7 +13,7 @@
     }
 
     .github-corner svg {
-        color: #0f9d58;
+        color: #24292E;
         fill: #fff;
         height: 64px;
         width: 64px;
