--- a/themes/hexo-theme-matery/layout/_partial/social-link.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/social-link.ejs
@@ -28,6 +28,7 @@
     </a>
 <% } %>
 
+
 <% if (theme.socialLink.facebook) { %>
     <a href="<%= theme.socialLink.facebook %>" class="tooltipped" target="_blank" data-tooltip="访问我的facebook" data-position="top" data-delay="50">
         <i class="fa fa-facebook"></i>
@@ -40,6 +41,11 @@
     </a>
 <% } %>
 
+<% if (theme.socialLink.about) { %>
+    <a href="<%= theme.socialLink.about %>" class="tooltipped" target="_blank" data-tooltip="关于我" data-position="top" data-delay="50">
+        <i class="fa fa-user"></i>
+    </a>
+<% } %>
 
 <% if (config.feed && config.feed.path == 'atom.xml') { %>
     <a href="<%- url_for('/atom.xml') %>" class="tooltipped" target="_blank" data-tooltip="RSS 订阅" data-position="top" data-delay="50">
