--- a/themes/hexo-theme-matery/layout/layout.ejs
+++ b/themes/hexo-theme-matery/layout/layout.ejs
@@ -17,6 +17,7 @@
 <script src="<%- theme.libs.js.scrollProgress %>"></script>
 <script src="<%- theme.libs.js.lightgallery %>"></script>
 <script src="/js/matery.js"></script>
+<script color="153,50,204" opacity="0.9" count="99" src="js/nest.js" type="text/javascript" charset="utf-8"></script>
 
 <%- partial('_partial/google-analytics') %>
 <% if (theme.clicklove.enable) { %>
