--- a/themes/hexo-theme-matery/layout/_partial/mobile-nav.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/mobile-nav.ejs
@@ -21,7 +21,7 @@
         menuMap.set("Categories", "分类");
         menuMap.set("Archives", "归档");
         menuMap.set("About", "关于");
-        menuMap.set("Friends", "友情链接");
+        menuMap.set("Friends", "友链");
     %>
 
     <ul class="menu-list mobile-menu-list">
