--- a/themes/hexo-theme-matery/layout/_partial/navigation.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/navigation.ejs
@@ -5,7 +5,7 @@
     menuMap.set("Categories", "分类");
     menuMap.set("Archives", "归档");
     menuMap.set("About", "关于");
-    menuMap.set("Friends", "友情链接");
+    menuMap.set("Friends", "友链");
 %>
 
 <a href="#" data-target="mobile-nav" class="sidenav-trigger button-collapse"><i class="fa fa-navicon"></i></a>
