--- a/themes/hexo-theme-matery/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="page-footer bg-color">
     <div class="container row center-align">
         <div class="col s12 m8 l8 copy-right">
-            &copy; <%= date(new Date(), 'YYYY') %> <a href="https://jenly1314.github.io/" target="_blank">Jenly</a> Powered by
+            Copyright &copy; 2016 - <%= date(new Date(), 'YYYY') %> <a href="https://jenly1314.github.io/" target="_blank">Jenly</a> Powered by
             <a href="https://hexo.io/" target="_blank">Hexo</a>.
             <% if (theme.wordCount.enable && theme.wordCount.totalCount) { %>
                 &nbsp;<i class="fa fa-area-chart"></i>
