--- a/themes/hexo-theme-matery/layout/_partial/social-link.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/social-link.ejs
@@ -6,7 +6,7 @@
 
 <% if (theme.socialLink.email) { %>
     <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
-        <i class="fa fa-envelope-open"></i>
+        <i class="fa fa-envelope"></i>
     </a>
 <% } %>
 
